clusters/beryjuorg-prd/beryjuorg/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beryju-org
  namespace: beryjuorg
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: beryju.org
  template:
    metadata:
      labels:
        app.kubernetes.io/name: beryju.org
    spec:
      containers:
        - image: ghcr.io/beryju/beryju.org:auto-1633946146 # {"$imagepolicy": "flux-system:beryjuorg"}
          imagePullPolicy: Always
          name: web
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          resources: {}
