clusters/beryjuorg-prd/beryjuorg/docker-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: docker
  name: docker
  namespace: beryjuorg
spec:
  externalName: harbor-harbor-core.prod-harbor.svc.cluster.local
  sessionAffinity: None
  type: ExternalName
