clusters/beryjuorg-prd/beryjuorg/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: beryju-org
  namespace: beryjuorg
spec:
  rules:
    - host: beryju.org
      http:
        paths:
          - backend:
              service:
                name: beryju-org
                port:
                  number: 80
            path: /
            pathType: Prefix
          - backend:
              service:
                name: docker
                port:
                  number: 80
            path: /v2
            pathType: Prefix
    - host: blog.beryju.org
      http:
        paths:
          - backend:
              service:
                name: beryju-org
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - beryju.org
        - blog.beryju.org
      secretName: beryju-org
